[package]
name = "hifive1-interrupts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hifive1 = {path = "../hifive1", features = ["board-redv"]}
panic-halt = "0.2.0"
riscv-rt = "0.9.0"
e310x = "0.10.0"
riscv = "0.9.0"
bare-metal = "0.2"

